# dumper_m3780

./: README.md  seanriddle.com_3870dumper.pbp.txt
dumps/: boris-dump-001.txt  boris-dump001.txt  boris_dumper.hex  hp-a.txt  hp-b.txt  hp-printer-dump001.txt  hp-printer-dump001.txt~  longtrace.txt  longtrace.txt~  printer_dump-001.txt
firmware/: CMakeLists.txt  CMakeLists.txt~  boris_dumper.hex~  boris_sean.hex  boris_sean.hex~  dumper_3780.c  dumper_3780.c~  hp_printer.hex  sean.code  sean.code~
pcbs/dumper_3870/dumper_3780/: ajm.lib  dumper_3780-cache.lib  dumper_3780.kicad_pcb  dumper_3780.kicad_pcb-bak  dumper_3780.pro  dumper_3780.sch  dumper_3780.sch-bak  fp-info-cache
pcbs/dumper_3870/dumper_3780/fab1/: dumper_3780-B_Cu.gbr  dumper_3780-B_Mask.gbr  dumper_3780-B_Paste.gbr  dumper_3780-B_SilkS.gbr  dumper_3780-Edge_Cuts.gbr  dumper_3780-F_Cu.gbr  dumper_3780-F_Mask.gbr  dumper_3780-F_Paste.gbr  dumper_3780-F_SilkS.gbr  dumper_3780-NPTH.drl  dumper_3780-PTH.drl  errata_mp_dumper_v_1_0
sean_riddle/: seanriddle.txt
